--- a/web1/src/styles.scss
+++ b/web1/src/styles.scss
@@ -40,11 +40,11 @@ input::-webkit-inner-spin-button {
 }
 input[type="date"] {
     padding: 0rem !important;
-    height: 1rem;
+    height: 15px;
     font-size: 14px;
-    line-height: 1.5 !important;
+    line-height: 11px !important;
     box-sizing: border-box;
-    padding-top: 16px !important;
+    padding-top: 10px !important;
 }
 .mat-form-field {
     font-size: inherit;
