--- a/server/views/AssignSupplierPDF.ejs
+++ b/server/views/AssignSupplierPDF.ejs
@@ -7,7 +7,7 @@
         zoom: 100%;
     }
     .logo{
-        width: 200%;
+        width: 200% !important;
     }
 </style>
 <body style="padding: 20px;">
@@ -37,7 +37,7 @@
         </div>
     </section>
 
-    <section>
+    <section style="zoom:120%">
         <table>
             <thead>
                 <tr>
