--- a/server/views/barcode.ejs
+++ b/server/views/barcode.ejs
@@ -110,7 +110,7 @@
                     <%}%>
 
                  <% if (data.CompanyID !== 20 && data.CompanyID !== 19 && data.CompanyID !== 64 && data.CompanyID !== 163 && data.CompanyID !== 193 && data.CompanyID !== 216 && data.CompanyID !== 218){%> 
-            <table style="margin-left: -10px; margin-top: -9px; ">
+            <table style="margin-left: -10px; margin-top: -9px; zoom: 80% !important;">
                 <tr>
                     <th  style="width: 140px; padding: 0;">
                         <div
