--- a/web1/src/app/admin/sms-setting/sms-setting.component.html
+++ b/web1/src/app/admin/sms-setting/sms-setting.component.html
@@ -104,7 +104,7 @@
                                                             MessageName</th>
 
                                                         <th style="text-align: left; padding-left: 0%;" width="64%">
-                                                            Message Text</th>
+                                                            Message Text (%26 = &)</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
