--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -21,7 +21,7 @@
         <div>
             <div style="border-bottom: 1px solid; width: 38%; position:absolute; margin-top: 1%;"> </div>
             <div style="border-bottom: 1px solid; width: 38%; float: right; position: relative; margin-top: 1%;"></div>
-            <span class="headingName">PURCHASE INVOICE</span>
+            <span class="headingName">PURCHASE INVOICE <br> (Goods Received Note)</span>
          </div>
     </section>
     <section style="width: 100%; height: 30px;">
