--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -964,10 +964,15 @@
                         [disabled]="BillMaster.ID === null" (click)="openModal13(content13)">Fitter Order</button>
                         <button type="button" mat-raised-button color="primary"
                         (click)="billPrint('Invoice')" > Receipt</button>
-                    <button type="button" class=" me-md-3 me-0 ms-md-3 ms-0"  mat-raised-button color="primary"
+                        <button type="button" (click)="billPrints('Invoice')" class="small_big_Btn"> S</button>
+                        <button type="button" (click)="billPrintB('Invoice')" class="small_big_Btn "> B</button>
+
+                    <button type="button" class=" me-md-0 me-0 ms-md-3 ms-0"  mat-raised-button color="primary"
                         (click)="billPrint('Receipt')"> Invoice</button>
-                       
-                    <button type="button" mat-raised-button color="primary">
+                        <button type="button" (click)="billPrints('Receipt')" class="small_big_Btn"> S</button>
+                        <button type="button" (click)="billPrintB('Receipt')" class="small_big_Btn "> B</button>
+
+                    <button type="button" mat-raised-button color="primary" class="ms-md-3">
                         <mat-slide-toggle name="ShowPower" color="primary" [(ngModel)]="ShowPower"
                             class="example-margin" #ShowPowercontrol>Show Power</mat-slide-toggle>
                     </button>
