--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -160,11 +160,11 @@
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
-                                            <div class="col-xl-2 col-lg-2 col-md-6 col-12 mb-0 ">
-                                                <button type="submit" mat-raised-button color="primary">
+                                            <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-0">
+                                                <button type="submit" class="me-3" mat-raised-button color="primary">
                                                     Search
                                                 </button>
-                                                <button type="button" class="ms-2 me-2" mat-raised-button color="warn"
+                                                <button type="button" class="me-3" mat-raised-button color="warn"
                                                     (click)="billMasterFromReset()">
                                                     Reset
                                                 </button>
